--- a/vasija.html
+++ b/vasija.html
@@ -13,7 +13,8 @@
     Texto previo
 </p>
 <x3d width='800px' height='800px'>
-<scene>
+<scene><Viewpoint position="-130.10311 33.92017 133.18074" orientation="-0.27821 -0.77518 0.56719 0.96612" 
+	 centerOfRotation="-21.71535 27.90713 24.56334" fieldOfView="0.78540" description="defaultX3DViewpointNode"></Viewpoint>
 <inline url="https://raw.githubusercontent.com/Nolotolo/modelo_2vasija/main/vasiaja_densibaja_textura.x3d"> </inline>
 </scene>
 </x3d>
